# nanotable

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: release.yml
src/nanotable/: __init__.py  errors.py  field.py  index.py  safety.py  storage.py  table.py  transaction.py
tests/: test_errors.py  test_field.py  test_index.py  test_safety.py  test_sorted_index.py  test_table.py  test_transaction.py
