[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanotable"
dynamic = ["version"]
description = 'More than a collection, less than a database'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = [
  "database", "table", "collection", "storage",
]
authors = [
  { name = "abel1502" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Database",
  "Intended Audience :: Developers",
  "Typing :: Typed",
]
dependencies = [
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
sorted = [
  "sortedcontainers>=2.4.0",
  "sortedcontainers-stubs>=2.4.3",
]

[dependency-groups]
dev = [
  "coverage>=7.14.0",
  "mypy>=2.1.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
]

[project.urls]
Documentation = "https://github.com/abel1502/nanotable#readme"
Issues = "https://github.com/abel1502/nanotable/issues"
Source = "https://github.com/abel1502/nanotable"

[tool.hatch.version]
path = "src/nanotable/__about__.py"

[tool.hatch.build]
reproducible = false

[tool.hatch.envs.dev]
dependency-groups = ["dev"]

[tool.hatch.envs.dev.scripts]
type-check = "mypy --install-types --non-interactive {args:src/nanotable tests}"
test = "pytest {args}"

[tool.hatch.envs.dev-ci]
template = "dev"

[tool.hatch.envs.dev-ci.scripts]
test = "pytest --cache-clear {args}"

[tool.hatch.envs.dev-ci.overrides]
matrix.with-sorted.features = [
  { value = "sorted", if = ["with-sorted"] },
]

[[tool.hatch.envs.dev-ci.matrix]]
python = ["3.13", "3.14"]
with-sorted = ["no-sorted", "with-sorted"]

[tool.coverage.run]
source_pkgs = ["nanotable", "tests"]
branch = true
parallel = true
omit = [
  "src/nanotable/__about__.py",
]

[tool.coverage.paths]
nanotable = ["src/nanotable", "*/nanotable/src/nanotable"]
tests = ["tests", "*/nanotable/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if (typing\\.)?TYPE_CHECKING:",
]
